# Gen-AI-MovieRecommender-

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  latest_movies.py  netflix_shows.py  pyproject.toml  router.py
app/: server.py
app/tools/: netflix.py
chat_ui/: main.py
data/: movies.csv  movies_clean.csv  movies_clean.json  movies_clean_2.csv  movies_clean_5.csv  netflix_data_cleaned.csv
tools/: tmdb.py
